--- a/assets/css/_reset.css
+++ b/assets/css/_reset.css
@@ -9,6 +9,7 @@ img {
 }
 input {
     outline: none;
+    border: none;
 }
 a {
     text-decoration: none;
