--- a/assets/css/_typography.css
+++ b/assets/css/_typography.css
@@ -1,8 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter&family=Rubik:wght@300&display=swap");
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 body {
-    font-size: 1.6rem;
-    font-family: var(--pri-font);
+  font-size: 1.6rem;
+  font-family: var(--pri-font);
+}
+a {
+  color: var(--white-color);
+}
+a:hover {
+  color: var(--pri-color);
+  transition: 0.3s ease-in-out;
 }
