--- a/assets/css/_variables.css
+++ b/assets/css/_variables.css
@@ -2,5 +2,7 @@
     --bg-color: #131720;
     --bg-shape: #151f30;
     --pri-color: #2f80ed;
+    --white-color: #e0e0e0;
     --pri-font: 'Inter', sans-serif;
+    --second-font: 'Rubik', sans-serif;
 }
